--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,52 @@
-# CubeIDE specific folders and files
-.cproject
-.project
+#settings
 .settings/
 
-# STM32CubeMX generated files
-*.ioc
+#metadata
+.metadata/
+
+#Debug
+Debug/
+debug/
+Release/
+release
+
+# Prerequisites
+*.d
 
 # Object files
 *.o
+*.ko
 *.obj
+*.elf
 
-# Precompiled Headers
-*.gch
-*.pch
+# Linker output
+*.ilk
+*.map
+*.exp
 
 # Libraries
-*.a
 *.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
 
 # Executables
-*.elf
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
 *.hex
 *.bin
 
 # Debug files
-*.d
-*.map
-*.ld
-*.lst
-*.crf
-*.bak
-*.log
-
-# Build output folders
-/Debug/
-/Release/
-/build/
-
-# Temporary files
-*.tmp
-*.swp
-*.swo
-
-# Backup files
-*.bak
-*.old
-*.orig
-*.save
-
-# JetBrains IDEs
-.idea/
-
-# MacOS specific
-.DS_Store
-
-# Windows specific
-Thumbs.db
-Desktop.ini
+*.dSYM/
+*.su
+*.idb
+*.pdb
